--- a/playbook.yml
+++ b/playbook.yml
@@ -3,8 +3,8 @@
   connection: local
   vars:
     tvlk_mongod_initialization: true
-    keyfile: "{{ lookup('file','/tmp/keyfile')}}"
-    datadog_api_key_parameter_store: "{{ lookup('aws_ssm','/tvlk-secret/shared/<changethiswithyourpd>/datadog.api.key',region='ap-southeast-1',decrypt=True)}}"
+    keyfile: "{{ lookup('file','/etc/mongodb_keyfile')}}"
+    datadog_api_key_parameter_store: "{{ lookup('aws_ssm','/tvlk-secret/shared/acd/datadog.api.key',region='ap-southeast-1',decrypt=True)}}"
   pre_tasks:
     - block:
         - name: set instance hostname
@@ -14,14 +14,15 @@
       become_method: sudo
       when: keyfile and temporary_master_password != ""
   roles:
-    - role: xfsvolume
-      xfs_volume_device: "{{volume_device | default('/dev/xvdf')}}"
-      xfs_volume_mount: /var/lib/mongodb
+    #- role: xfsvolume
+    #  xfs_volume_device: "{{volume_device | default('/dev/xvdf')}}"
+    #  xfs_volume_mount: /var/lib/mongodb
+    #  xfs_volume_force_format: yes
     - role: mongod-3.6
       mongodb_authorization_enabled: false
       when: tvlk_mongod_initialization == true
-    - role: datadog-agent
-      datadog_api_key: "{{ datadog_api_key_parameter_store }}"
+    #- role: datadog-agent
+    #  datadog_api_key: "{{ datadog_api_key_parameter_store }}"
     - role: awslogs-config
       awslogs_app_name: "{{service_name}}-mongod"
       awslogs_app_log_settings:
